--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "numeral": "^2.0.6",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
-    "vis": "^4.21.0-EOL"
+    "vis": "^4.21.0-EOL",
+    "web3": "^1.5.2"
   },
   "version": "0.1.0",
   "devDependencies": {
